# outbound-engine-x-api

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  log-agent-response-1.md  new-agent-response.md  nixpacks.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  trigger.config.ts  tsconfig.json
docs/: AGENT_SCOPE_PROTOCOL.md  AI_HANDOFF_PHASE2_SUMMARY.md  API.md  ARCHITECTURE.md  BUILD-PHASE-2.md  EMAILBISON_CANONICAL_HANDOFF.md  EMAILBISON_IMPLEMENTED_ENDPOINT_REGISTRY.md  EMAILBISON_ROLLOUT_RELEASE_NOTE_2026-02-16.md  FRONTEND_MULTI_CHANNEL_API_REFERENCE.md  LOB_CANONICAL_HANDOFF.md  LOB_IMPLEMENTED_ENDPOINT_REGISTRY.md  LOB_OPERATOR_RUNBOOK.md  MULTI_CHANNEL_PROVIDER_VALIDATION.md  PROJECT_STATUS_2026-02-15.md  SCHEMA.md  SUPER_ADMIN_API.md  WEBHOOK_INCIDENT_RUNBOOK.md  WEBHOOK_RUNBOOK_DRILLS.md  phase-1-build.md
migrations/: 001_phase1_tables.sql  002_super_admins.sql  003_org_provider_configs.sql  005_company_inboxes.sql  006_company_campaigns.sql  007_campaign_sequences.sql  008_company_campaign_leads.sql  009_company_campaign_messages.sql  010_webhook_events.sql  011_webhook_reliability.sql  012_observability_metric_snapshots.sql  013_campaign_message_sync_state.sql  014_message_sequence_step_number.sql  015_direct_mail_lob_foundation.sql  016_company_direct_mail_pieces.sql  017_direct_mail_piece_types_expand.sql  018_lob_reliability_indexes.sql  019_user_roles_rbac_phase1.sql  020_multi_channel_campaigns.sql  021_campaign_events.sql  022_per_lead_step_content.sql  023_composite_fk_tightening.sql  024_voicedrop_capability.sql
src/: db.py  (+3 more)
(+91 files in other folders)
